--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
               <artifactId>exec-maven-plugin</artifactId>
               <version>3.1.0</version>
               <configuration>
-                  <mainClass>no.dervis.BitChess</mainClass>
+                  <mainClass>no.dervis.TerminalChess</mainClass>
               </configuration>
           </plugin>
       </plugins>
