--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>bitchess</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>no.dervis</groupId>
+  <artifactId>terminal_aichess</artifactId>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -49,7 +49,7 @@
               <artifactId>exec-maven-plugin</artifactId>
               <version>3.1.0</version>
               <configuration>
-                  <mainClass>no.dervis.TerminalChess</mainClass>
+                  <mainClass>no.dervis.terminal_aichess.TerminalChess</mainClass>
               </configuration>
           </plugin>
       </plugins>
