--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>no.dervis</groupId>
-  <artifactId>terminal_aichess</artifactId>
+  <artifactId>terminal_chess</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <properties>
-    <java.version>22</java.version>
+    <java.version>23</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -54,7 +54,7 @@
               <artifactId>exec-maven-plugin</artifactId>
               <version>3.1.0</version>
               <configuration>
-                  <mainClass>no.dervis.terminal_aichess.TerminalChess</mainClass>
+                  <mainClass>no.dervis.terminal_games.terminal_chess.TerminalChess</mainClass>
               </configuration>
           </plugin>
       </plugins>
