--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>no.dervis</groupId>
-  <artifactId>terminal_chess</artifactId>
+  <artifactId>terminal_games</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
